basic implementation complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,10 @@
   "python.linting.pylintEnabled": true,
   "python.linting.pylintPath": "v-ane-research/bin/pylint",
   "python.linting.lintOnSave": true,
+  "python.linting.pylintArgs": [
+    "--errors-only",
+    "--generated-members=numpy.* ,torch.* ,cv2.* , cv.*"
+  ],
   "editor.insertSpaces": true,
   "editor.renderWhitespace": "all",
   "editor.tabSize": 2,
